[package]
name = "lem"
version = "0.1.0"
authors = ["deciduously <bendlovy@gmail.com>"]

[dependencies]
chrono = { version = "0", features = ["serde", "rustc-serialize"] }
diesel = { version = "0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0", features = ["postgres"] }
dotenv_macros = "0"
r2d2 = "0"
r2d2-diesel = "0"
rocket = "0"
rocket_codegen = "0"
rocket_contrib = "0"
serde = "0"
serde_derive = "0"
serde_json = "0"